# klaculate

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clean.sh  debug.sh  llvm-debug.sh  updateserver.sh  ver.sh
.usages_clang/: src_klac.cpp.usages  src_klac.h.usages  src_klaculate.h.usages  src_ktok.h.usages  src_main.cpp.usages  src_misctools.cpp.usages  src_util_InputHelper.cpp.usages  src_util_InputHelper.h.usages  src_util_OutputHelper.cpp.usages  src_util_OutputHelper.h.usages
devdocs/: adding-tokens.md  testing-locally.md
src/: CMakeLists.txt  klac.cpp  klac.h  klakulate.h.in  ktok.cpp  ktok.h  main.cpp  misctools.cpp  solver.cpp  solver.h
src/util/: InputHelper.cpp  InputHelper.h  OutputHelper.cpp  OutputHelper.h  TokenArray.cpp  TokenArray.h  TokenData.cpp  TokenData.h  TokenHolder.cpp  TokenHolder.h  base64.cpp
system/: rixie
templates/: answer.html  banner.html  default.html  footer.html  header.html  paren_start.html  step.html
templates/answers/: 3.14159.html  42.html
templates/pages/: about.html  help.html
web/: klaculate.css
